#30: fetch data from same host with new nginx proxy setup

--- a/hestia-static-dash/index.html
+++ b/hestia-static-dash/index.html
@@ -19,7 +19,7 @@
     <script defer src="/static/status.js"></script>
     <script defer src="/static/chart.js"></script>
 </head>
-<body data-fetch-host="http://beaglebone.local:5001">
+<body data-fetch-host="">
 <header id="header">
     <section class="container">
         <h1 class="title">Hestia control panel</h1>
