--- a/hestia-static-dash/index.html
+++ b/hestia-static-dash/index.html
@@ -18,6 +18,7 @@
             src="https://cdn.jsdelivr.net/npm/chartjs-adapter-luxon@1.3.0/dist/chartjs-adapter-luxon.umd.min.js"></script>
     <script defer src="/static/status.js"></script>
     <script defer src="/static/chart.js"></script>
+    <script defer src="/static/log_files.js"></script>
 </head>
 <body data-fetch-host="">
 <header id="header">
@@ -108,20 +109,17 @@
 
     <section id="log-section">
         <h3>Log files</h3>
-        <ul>
-            {% for l in log_files %}
-            <li><a href="{{ l.url }}">{{ l.name }}</a></li>
-            {% endfor %}
+        <ul id="log-files">
         </ul>
     </section>
 
     <section id="dev-section">
         <h3>Development APIs</h3>
         <ul>
-            <li><a href="/api">API Overview</a></li>
             <li><a href="/api/status">Status</a></li>
             <li><a href="/api/data">Latest data</a></li>
             <li><a href="/api/log_data">Recently logged data</a></li>
+            <li><a href="/api/log_files">Log files</a></li>
         </ul>
     </section>
 </main>
