#39: show heater_duty on the chart

--- a/hestia-static-dash/index.html
+++ b/hestia-static-dash/index.html
@@ -50,12 +50,12 @@
             <div class="column column-20"><input disabled id="heater-power" size="10" value="n/a"></div>
         </div>
         <div class="row">
-            <div class="column column-20"><label for="heater-duty">Heater duty (%)</label></div>
+            <div class="column column-20"><label for="heater-duty">Heater duty (0-1)</label></div>
             <div class="column column-20"><input disabled id="heater-duty" size="10" value="n/a"></div>
             <div class="column column-60">
-                <button class="set-heater-duty" data-duty="50">20%</button>
-                <button class="set-heater-duty" data-duty="130">50%</button>
-                <button class="set-heater-duty" data-duty="255">100%</button>
+                <button class="set-heater-duty" data-duty="50">0.2</button>
+                <button class="set-heater-duty" data-duty="130">0.5</button>
+                <button class="set-heater-duty" data-duty="255">1.0</button>
             </div>
         </div>
         <div class="row">
