#46: add custom duty control to web interface

--- a/hestia-static-dash/index.html
+++ b/hestia-static-dash/index.html
@@ -56,6 +56,9 @@
                 <button class="set-heater-duty" data-duty="50">0.2</button>
                 <button class="set-heater-duty" data-duty="130">0.5</button>
                 <button class="set-heater-duty" data-duty="255">1.0</button>
+                Custom: 
+                <input id="custom-heater-duty" size="5" value="0.1" style="max-width: 50px">
+                <button class="set-custom-heater-duty">Apply</button>
             </div>
         </div>
         <div class="row">
