#47: add host to API links dynamically

--- a/hestia-static-dash/index.html
+++ b/hestia-static-dash/index.html
@@ -186,7 +186,7 @@
 
         <section id="dev-section">
             <h3>Development APIs</h3>
-            <ul class="list-disc pl-4 text-sm">
+            <ul class="api-links list-disc pl-4 text-sm">
                 <li><a href="/api/status">Status</a></li>
                 <li><a href="/api/data">Latest data</a></li>
                 <li><a href="/api/log_data">Recently logged data</a></li>
