#47: fix board chart data

--- a/hestia-static-dash/index.html
+++ b/hestia-static-dash/index.html
@@ -170,10 +170,12 @@
                 <h3>Board status</h3>
                 <a href="#" id="board-flip" class="my-4 text-sm">Flip</a>
             </div>
-            <div id="board-chart-container">
+            <h4>Top board</h4>
+            <div class="board-chart-container">
                 <canvas id="board-chart-top"></canvas>
             </div>
-            <div id="board-chart-container">
+            <h4>Bottom board</h4>
+            <div class="board-chart-container">
                 <canvas id="board-chart-bottom"></canvas>
             </div>
         </section>
