#47: fix custom duty

--- a/hestia-static-dash/index.html
+++ b/hestia-static-dash/index.html
@@ -70,7 +70,7 @@
                         <button class="set-heater-duty" data-board="top" data-duty="255">1.0</button>
                         <span class="ml-2 mr-1">Custom:</span>
                         <input id="custom-heater-duty-top" size="5" value="0.1" style="max-width: 50px">
-                        <button class="set-custom-heater-duty-top">Apply</button>
+                        <button class="set-custom-heater-duty" data-board="top">Apply</button>
                     </div>
 
                     <div><label for="target-temp-top">Target temp (°C)</label></div>
@@ -123,7 +123,7 @@
                         <button class="set-heater-duty" data-board="bottom" data-duty="255">1.0</button>
                         <span class="ml-2 mr-1">Custom:</span>
                         <input id="custom-heater-duty-bottom" size="5" value="0.1" style="max-width: 50px">
-                        <button class="set-custom-heater-duty-bottom">Apply</button>
+                        <button class="set-custom-heater-duty" data-board="bottom">Apply</button>
                     </div>
 
                     <div><label for="target-temp-bottom">Target temp (°C)</label></div>
