#47: remove local fetch host

--- a/hestia-static-dash/index.html
+++ b/hestia-static-dash/index.html
@@ -20,7 +20,7 @@
     <script defer src="/static/log_files.js"></script>
 </head>
 
-<body data-fetch-host="http://raptor.local:5001" class="bg-zinc-950 text-zinc-200 max-w-screen-lg mx-auto px-4">
+<body data-fetch-host="" class="bg-zinc-950 text-zinc-200 max-w-screen-lg mx-auto px-4">
     <header id="header" class="container flex flex-row gap-4 my-4 border-zinc-100">
         <div>
             <svg width="120" viewBox="0 0 72 32" version="1.1" xmlns="http://www.w3.org/2000/svg" xml:space="preserve">
