#47: fix old logs list appearing multiple times

--- a/hestia-static-dash/index.html
+++ b/hestia-static-dash/index.html
@@ -215,6 +215,10 @@
             <h3>Log files</h3>
             <ul id="log-files" class="list-disc pl-4 text-sm">
             </ul>
+            <details class="text-sm my-2 hidden">
+                <summary>Older files</summary>
+                <ul id="older-log-files" class="list-disc pl-4 text-sm"></ul>
+            </details>
         </section>
 
         <section id="dev-section">
